caminho bootstrap.js alterado

--- a/produto.html
+++ b/produto.html
@@ -135,7 +135,7 @@
             </div>
         </footer>
     </div>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
     <script>
         function trocarImagem(el) {
             var imgProduto = document.getElementById("imgProduto");
