--- a/cadastro.html
+++ b/cadastro.html
@@ -171,7 +171,7 @@
         </footer>
     </div>
 
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
