--- a/cliente_endereco.html
+++ b/cliente_endereco.html
@@ -148,7 +148,7 @@
             </div>
         </footer>
     </div>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
