--- a/cliente_senha.html
+++ b/cliente_senha.html
@@ -145,7 +145,7 @@
             </div>
         </footer>
     </div>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
