alterações no navbar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Quitanda Online :: Página Principal</title>
+    <title>Sacolão Avenida : Página Principal</title>
 </head>
 
 <body>
