--- a/cliente_contatos.html
+++ b/cliente_contatos.html
@@ -19,38 +19,44 @@
     <link rel="stylesheet" href="css/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Quitanda Online :: Área do Cliente :: Contatos</title>
+    <title>Sacolão Avenida : Área do Cliente : Contatos</title>
 </head>
 
 <body>
     <div class="d-flex flex-column wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
-                <a class="navbar-brand" href="/"><b>Quitanda Online</b></a>
+                <a class="navbar-brand tittle" href="index.html"><b>Sacolão Avenida</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link text-white" href="index.html">Principal</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="contato.html">Contato</a>
-                        </li>
+                        </li> -->
                     </ul>
                     <div class="align-self-end">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a href="cliente_pedidos.html" class="nav-link text-white">Logado como <b>Ricardo Maroquio</b></a>
+                                <a class="nav-link text-white" href="index.html"><strong>Início</strong></a>
                             </li>
                             <li class="nav-item">
-                                <a href="login.html" class="nav-link text-white">Sair</a>
+                                <a class="nav-link text-white" href="contato.html"><strong>Contato</strong></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="cadastro.html" class="nav-link text-white"><strong>Cadastro</strong></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="login.html" class="nav-link text-white"><strong>Login</strong></a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart4" style="font-size:30px;line-height:30px;"></i>
+                                    <i class="bi-cart4" style="font-size:24px;line-height:25px;"></i>
                                 </a>
                             </li>
                         </ul>
