--- a/base.html
+++ b/base.html
@@ -26,7 +26,7 @@
     <div class="d-flex flex-column wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
-                <a class="navbar-brand tittle" href="#"><b>Sacolão Avenida</b></a>
+                <a class="navbar-brand tittle" href="index.html"><b>Sacolão Avenida</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
