inclusão de informações no footer

--- a/index.html
+++ b/index.html
@@ -474,7 +474,24 @@
                 </div>
             </div>
         </main>
+        <!-- inclusão dos cookies  -->
+        <div class="cookies-container">
+            <div class="cookies-content">
+                <div class="cookies-poopup">
+                    <p> <strong>Renovamos nossa Política de Cookies</strong></p>
+                </div>
+                <div class="cookies-pref">
+                    <span>Ao clicar em “CONCORDAR E FECHAR”, 
+                    você concorda com o armazenamento de cookies no seu dispositivo para melhorar a navegação no site, 
+                    analisar o uso do site e ajudar em nossos esforços de marketing.</span>
+                </div>
+                <button class="cookies-save"><strong>CONCORDAR E FECHAR</strong></button>
+            </div>
+        </div>
+        <!-- teh end cookies  -->
 
+
+        <!-- init-footer  -->
         <footer class="border-top text-muted bg-danger ">
             <div class="container">
                 <div class="row py-3">
@@ -506,29 +523,28 @@
                     </div>
                 </div>
             </div>
-        </footer>
+            <section>
+                <div class="footer-ma">
+                    <div class="footer ">
+
+                    </div>
+                    <p> <a class="text-white" href=" https://github.com/mateusnagelo " target="_blank" rel="noopener noreferrer">
+                Copyright © 2022 todos os direitos reservados | Este site foi criado por Mateus Ângelo
+            </a>
+                    </p>
+                </div>
+            </section>
     </div>
+    </footer>
+
+    <!-- the end footer  -->
 
 
-    <!-- inclusão dos cookies  -->
-
-    <div class="cookies-container">
-        <div class="cookies-content">
-            <div class="cookies-poopup">
-                <p> <strong>Renovamos nossa Política de Cookies</strong></p>
-            </div>
-            <div class="cookies-pref">
-                <span>Ao clicar em “CONCORDAR E FECHAR”, 
-                    você concorda com o armazenamento de cookies no seu dispositivo para melhorar a navegação no site, 
-                    analisar o uso do site e ajudar em nossos esforços de marketing.</span>
-            </div>
-            <button class="cookies-save"><strong>CONCORDAR E FECHAR</strong></button>
-        </div>
-    </div>
-    <script src="scripts/cookies.js"></script>
-
+    <!-- init scripts -->
     <script src="./scripts/cookies.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <!-- the end scripts -->
+
 
 
 </body>
