--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
                 </div>
             </div>
         </main>
+
         <!-- inclusão dos cookies  -->
         <div class="cookies-container">
             <div class="cookies-content">
@@ -492,48 +493,52 @@
 
 
         <!-- init-footer  -->
-        <footer class="border-top text-muted bg-danger ">
-            <div class="container">
-                <div class="row py-3">
-                    <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="privacidade.html" class="text-decoration-none">
+        <div class="imgsvg">
+            <img src="img/svg/wave.svg">
+            <footer class="border-top text-muted " id="columun-footer">
+                <div class="container">
+                    <div class="row py-3">
+                        <div class="col-12 col-md-4 text-center">
+                            &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="privacidade.html" class="text-decoration-none ">
                             Política de Privacidade
                         </a><br>
-                        <a href="termos.html" class="text-decoration-none ">
+                            <a href="termos.html" class="text-decoration-none ">
                             Termos de Uso
                         </a><br>
-                        <a href="quemsomos.html" class="text-decoration-none">
+                            <a href="quemsomos.html" class="text-decoration-none">
                             Quem Somos
                         </a><br>
-                        <a href="trocas.html" class="text-decoration-none ">
+                            <a href="trocas.html" class="text-decoration-none ">
                             Trocas e Devoluções
                         </a>
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="contato.html" class="text-decoration-none">
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="contato.html" class="text-decoration-none">
                             Contato pelo Site
                         </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none">
                             email@dominio.com
                         </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none">
                             (77) 99999-9999
+                            
                         </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <section>
-                <div class="footer-ma">
-                    <div class="footer ">
+        </div>
+        <section>
+            <div class="footer-ma">
+                <div class="footer ">
 
-                    </div>
-                    <p> <a class="text-white" href=" https://github.com/mateusnagelo " target="_blank" rel="noopener noreferrer">
+                </div>
+                <p> <a class="text-decoration-none" href=" https://github.com/mateusnagelo " target="_blank" rel="noopener noreferrer">
                 Copyright © 2022 todos os direitos reservados | Este site foi criado por Mateus Ângelo
             </a>
-                    </p>
-                </div>
-            </section>
+                </p>
+            </div>
+        </section>
     </div>
     </footer>
 
