insert img na tag footer

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 <div class="container">
                     <div class="row py-3">
                         <div class="col-12 col-md-4 text-center">
-                            &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
+                            &copy; 2020 - Sacolão Avenida Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
                         </div>
                         <div class="col-12 col-md-4 text-center">
                             <a href="privacidade.html" class="text-decoration-none ">
