alteração color img svg

--- a/index.html
+++ b/index.html
@@ -548,9 +548,13 @@
     <!-- init scripts -->
     <script src="./scripts/cookies.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./scripts/topo.js"></script>
     <!-- the end scripts -->
 
-
+    <!-- <div class="topo-button">
+        <i class="bi bi-arrow-up-circle" id="back-to-top" style="font-size: 35px; line-height: 50px;"></i>
+        <<button id="back-to-top">Voltar ao topo</button> 
+    </div> -->
 
 </body>
 
