--- a/index.html
+++ b/index.html
@@ -551,10 +551,9 @@
     <script src="./scripts/topo.js"></script>
     <!-- the end scripts -->
 
-    <!-- <div class="topo-button">
-        <i class="bi bi-arrow-up-circle" id="back-to-top" style="font-size: 35px; line-height: 50px;"></i>
-        <<button id="back-to-top">Voltar ao topo</button> 
-    </div> -->
+    <div class="topo-button">
+        <i class="bi bi-arrow-up-circle" id="back-to-top" onclick="scrollBar()" style="font-size: 35px; line-height: 50px;"></i>
+    </div>
 
 </body>
 
