--- a/cadastro.html
+++ b/cadastro.html
@@ -154,27 +154,67 @@
             </div>
         </main>
 
-        <footer class="border-top text-muted bg-danger">
-            <div class="container">
-                <div class="row py-3">
-                    <div class="col-12 col-md-4 text-center text-md-left">
-                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="privacidade.html" class="text-decoration-none">Política de
-                            Privacidade</a><br>
-                        <a href="termos.html" class="text-decoration-none">Termos de Uso</a><br>
-                        <a href="quemsomos.html" class="text-decoration-none">Quem Somos</a><br>
-                        <a href="trocas.html" class="text-decoration-none">Trocas e Devoluções</a>
-                    </div>
-                    <div class="col-12 col-md-4 text-center text-md-right">
-                        <a href="contato.html" class="text-decoration-none">Contato pelo site</a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none">email@dominio.com</a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none">(77) 99999-0000</a>
+        <!-- init-footer  -->
+        <div class="imgsvg">
+            <img src="img/svg/wave.svg">
+            <footer class="border-top text-muted " id="columun-footer">
+                <div class="container">
+                    <div class="row py-3">
+                        <div class="col-12 col-md-4 text-center">
+                            &copy; 2020 - Sacolão Avenida Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="privacidade.html" class="text-decoration-none ">
+                            Política de Privacidade
+                        </a><br>
+                            <a href="termos.html" class="text-decoration-none ">
+                            Termos de Uso
+                        </a><br>
+                            <a href="quemsomos.html" class="text-decoration-none">
+                            Quem Somos
+                        </a><br>
+                            <a href="trocas.html" class="text-decoration-none ">
+                            Trocas e Devoluções
+                        </a>
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="contato.html" class="text-decoration-none">
+                            Contato pelo Site
+                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none">
+                            email@dominio.com
+                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none">
+                            (77) 99999-9999
+                            
+                        </a>
+                        </div>
                     </div>
                 </div>
+        </div>
+        <section>
+            <div class="footer-ma">
+                <div class="footer ">
+
+                </div>
+                <p> <a class="text-decoration-none" href=" https://github.com/mateusnagelo " target="_blank" rel="noopener noreferrer">
+                Copyright © 2022 todos os direitos reservados | Este site foi criado por Mateus Ângelo
+            </a>
+                </p>
             </div>
-        </footer>
+        </section>
+    </div>
+    </footer>
+
+    <!-- the end footer  -->
+
+
+    <!-- init button topo  -->
+    <div class="topo-button">
+        <i class="bi bi-arrow-up-circle" id="back-to-top" onclick="scrollBar()" style="font-size: 35px; line-height: 50px;"></i>
     </div>
 
+    <!-- the end button topo  -->
+
+    <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
