insert cart-4 no button 'adicionar ao carrinho'

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
