insert cart-4 no button 'adicionar ao carrinho'

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -236,6 +237,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -259,6 +261,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -282,6 +285,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -305,6 +309,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -328,6 +333,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -351,6 +357,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -374,6 +381,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -397,6 +405,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
@@ -420,6 +429,7 @@
                             <div class="card-footer">
                                 <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                     Adicionar ao Carrinho
+                                    <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                 </a>
                                 <small class="text-success">320,5kg em estoque</small>
                             </div>
