insert cart-4 no button 'adicionar ao carrinho'

--- a/cliente_favoritos.html
+++ b/cliente_favoritos.html
@@ -32,12 +32,7 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Principal</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="contato.html">Contato</a>
-                        </li> -->
+
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav flex-grow-1">
@@ -114,6 +109,7 @@
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                             Adicionar ao Carrinho
+                                            <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
@@ -137,6 +133,7 @@
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                             Adicionar ao Carrinho
+                                            <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
@@ -160,6 +157,7 @@
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                             Adicionar ao Carrinho
+                                            <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
@@ -183,6 +181,7 @@
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                             Adicionar ao Carrinho
+                                            <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
@@ -206,6 +205,7 @@
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                             Adicionar ao Carrinho
+                                            <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
@@ -229,6 +229,7 @@
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                             Adicionar ao Carrinho
+                                            <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
@@ -252,6 +253,7 @@
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                             Adicionar ao Carrinho
+                                            <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
@@ -275,6 +277,7 @@
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
                                             Adicionar ao Carrinho
+                                            <i class="bi-cart4" style="font-size: 20px; line-height: 15px;"></i>
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
