insert cart-4 no button 'adicionar ao carrinho'

--- a/cadastrarnovasenha.html
+++ b/cadastrarnovasenha.html
@@ -32,12 +32,7 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Principal</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="contato.html">Contato</a>
-                        </li> -->
+
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav flex-grow-1">
@@ -88,39 +83,67 @@
             </div>
         </main>
 
-        <footer class="border-top text-muted bg-danger ">
-            <div class="container">
-                <div class="row py-3">
-                    <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="/privacidade.html" class="text-decoration-none">
+        <!-- init-footer  -->
+        <div class="imgsvg">
+            <img src="img/svg/wave.svg">
+            <footer class="border-top text-muted " id="columun-footer">
+                <div class="container">
+                    <div class="row py-3">
+                        <div class="col-12 col-md-4 text-center">
+                            &copy; 2020 - Sacolão Avenida Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="privacidade.html" class="text-decoration-none ">
                             Política de Privacidade
                         </a><br>
-                        <a href="/termos.html" class="text-decoration-none">
+                            <a href="termos.html" class="text-decoration-none ">
                             Termos de Uso
                         </a><br>
-                        <a href="/quemsomos.html" class="text-decoration-none">
+                            <a href="quemsomos.html" class="text-decoration-none">
                             Quem Somos
                         </a><br>
-                        <a href="/trocas.html" class="text-decoration-none">
+                            <a href="trocas.html" class="text-decoration-none ">
                             Trocas e Devoluções
                         </a>
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="/contato.html" class="text-decoration-none">
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="contato.html" class="text-decoration-none">
                             Contato pelo Site
                         </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none">
                             email@dominio.com
                         </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none">
-                            (28) 99999-0000
+                            (77) 99999-9999
+                            
                         </a>
+                        </div>
                     </div>
                 </div>
+        </div>
+        <section>
+            <div class="footer-ma">
+                <div class="footer ">
+
+                </div>
+                <p> <a class="text-decoration-none" href=" https://github.com/mateusnagelo " target="_blank" rel="noopener noreferrer">
+                Copyright © 2022 todos os direitos reservados | Este site foi criado por Mateus Ângelo
+            </a>
+                </p>
             </div>
-        </footer>
+        </section>
     </div>
+    </footer>
+
+    <!-- the end footer  -->
+
+
+    <!-- init button topo  -->
+    <div class="topo-button">
+        <i class="bi bi-arrow-up-circle" id="back-to-top" onclick="scrollBar()" style="font-size: 35px; line-height: 50px;"></i>
+    </div>
+
+    <!-- the end button topo  -->
+
+    <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
