--- a/privacidade.html
+++ b/privacidade.html
@@ -32,12 +32,7 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Principal</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="contato.html">Contato</a>
-                        </li> -->
+
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav flex-grow-1">
@@ -68,8 +63,8 @@
         <main class="flex-fill">
             <div class="container">
                 <h2>Política Privacidade</h2>
-                <p>A sua privacidade é importante para nós. É política do Quitanda Online respeitar a sua privacidade em relação a qualquer informação sua que possamos coletar no site <a href=http://www.dominio.com>Quitanda Online</a>, e outros sites que
-                    possuímos e operamos.</p>
+                <p>A sua privacidade é importante para nós. É política do
+                    <Strong>Sacolão Avenida</Strong> respeitar a sua privacidade em relação a qualquer informação sua que possamos coletar no site <a href=http://www.dominio.com>Sacolão Avenida</a>, e outros sites que possuímos e operamos.</p>
                 <p>Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe fornecer um serviço. Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que estamos coletando e como será
                     usado. </p>
                 <p>Apenas retemos as informações coletadas pelo tempo necessário para fornecer o serviço solicitado. Quando armazenamos dados, protegemos dentro de meios comercialmente aceitáveis ​​para evitar perdas e roubos, bem como acesso, divulgação,
@@ -81,7 +76,7 @@
                 <p>O uso continuado de nosso site será considerado como aceitação de nossas práticas em torno de privacidade e informações pessoais. Se você tiver alguma dúvida sobre como lidamos com dados do usuário e informações pessoais, entre em contacto
                     connosco.
                 </p>
-                <h2>Política de Cookies Quitanda Online</h2>
+                <h2>Política de Cookies Sacolão Avenida</h2>
                 <h3>O que são cookies?</h3>
                 <p>Como é prática comum em quase todos os sites profissionais, este site usa cookies, que são pequenos arquivos baixados no seu computador, para melhorar sua experiência. Esta página descreve quais informações eles coletam, como as usamos
                     e por que às vezes precisamos armazenar esses cookies. Também compartilharemos como você pode impedir que esses cookies sejam armazenados, no entanto, isso pode fazer o downgrade ou 'quebrar' certos elementos da funcionalidade do site.</p>
@@ -128,14 +123,14 @@
                     </li>
                 </ul>
                 <h3>Compromisso do Usuário</h3>
-                <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o Quitanda Online oferece no site e com caráter enunciativo, mas não limitativo:</p>
+                <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o <strong>Sacolão Avenida</strong> oferece no site e com caráter enunciativo, mas não limitativo:</p>
                 <ul>
                     <li>A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;
                     </li>
                     <li>B) Não divulgar conteúdo ou propaganda de natureza racista, xenofóbica, <a href='https://ondeapostar.pt/' style='color: inherit;font-weight: normal;text-decoration:none;'>casas de apostas online</a>, pornografia ilegal, de apologia
                         ao terrorismo ou contra os direitos humanos;</li>
-                    <li>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do Quitanda Online, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware ou software
-                        que sejam capazes de causar danos anteriormente mencionados.</li>
+                    <li>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do <strong>Sacolão Avenida</strong>, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware
+                        ou software que sejam capazes de causar danos anteriormente mencionados.</li>
                 </ul>
                 <h3>Mais informações</h3>
                 <p>Esperemos que esteja esclarecido e, como mencionado anteriormente, se houver algo que você não tem certeza se precisa ou não, geralmente é mais seguro deixar os cookies ativados, caso interaja com um dos recursos que você usa em nosso
@@ -145,39 +140,67 @@
             </div>
         </main>
 
-        <footer class="border-top text-muted bg-danger">
-            <div class="container">
-                <div class="row py-3">
-                    <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="privacidade.html" class="text-decoration-none">
+        <!-- init-footer  -->
+        <div class="imgsvg">
+            <img src="img/svg/wave.svg">
+            <footer class="border-top text-muted " id="columun-footer">
+                <div class="container">
+                    <div class="row py-3">
+                        <div class="col-12 col-md-4 text-center">
+                            &copy; 2020 - Sacolão Avenida Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="privacidade.html" class="text-decoration-none ">
                             Política de Privacidade
                         </a><br>
-                        <a href="termos.html" class="text-decoration-none">
+                            <a href="termos.html" class="text-decoration-none ">
                             Termos de Uso
                         </a><br>
-                        <a href="quemsomos.html" class="text-decoration-none">
+                            <a href="quemsomos.html" class="text-decoration-none">
                             Quem Somos
                         </a><br>
-                        <a href="trocas.html" class="text-decoration-none">
+                            <a href="trocas.html" class="text-decoration-none ">
                             Trocas e Devoluções
                         </a>
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="contato.html" class="text-decoration-none">
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="contato.html" class="text-decoration-none">
                             Contato pelo Site
                         </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none">
                             email@dominio.com
                         </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none">
-                            (77) 99999-0000
+                            (77) 99999-9999
+                            
                         </a>
+                        </div>
                     </div>
                 </div>
+        </div>
+        <section>
+            <div class="footer-ma">
+                <div class="footer ">
+
+                </div>
+                <p> <a class="text-decoration-none" href=" https://github.com/mateusnagelo " target="_blank" rel="noopener noreferrer">
+                Copyright © 2022 todos os direitos reservados | Este site foi criado por Mateus Ângelo
+            </a>
+                </p>
             </div>
-        </footer>
+        </section>
     </div>
+    </footer>
+
+    <!-- the end footer  -->
+
+
+    <!-- init button topo  -->
+    <div class="topo-button">
+        <i class="bi bi-arrow-up-circle" id="back-to-top" onclick="scrollBar()" style="font-size: 35px; line-height: 50px;"></i>
+    </div>
+
+    <!-- the end button topo  -->
+
+    <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
