--- a/termos.html
+++ b/termos.html
@@ -32,12 +32,7 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Principal</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="contato.html">Contato</a>
-                        </li> -->
+
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav flex-grow-1">
@@ -68,80 +63,108 @@
         <main class="flex-fill">
             <div class="container">
                 <h2>1. Termos</h2>
-                <p>Ao acessar ao site <a href='http://www.dominio.com'>Quitanda Online</a>, concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis ​​e concorda que é responsável pelo cumprimento de todas as leis locais aplicáveis.
+                <p>Ao acessar ao site <a href='http://www.dominio.com'>Sacolão Avenida</a>, concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis ​​e concorda que é responsável pelo cumprimento de todas as leis locais aplicáveis.
                     Se você não concordar com algum desses termos, está proibido de usar ou acessar este site. Os materiais contidos neste site são protegidos pelas leis de direitos autorais e marcas comerciais aplicáveis.</p>
                 <h2>2. Uso de Licença</h2>
-                <p>É concedida permissão para baixar temporariamente uma cópia dos materiais (informações ou software) no site Quitanda Online , apenas para visualização transitória pessoal e não comercial. Esta é a concessão de uma licença, não uma transferência
-                    de título e, sob esta licença, você não pode: </p>
+                <p>É concedida permissão para baixar temporariamente uma cópia dos materiais (informações ou software) no site <strong>Sacolão Avenida</strong>, apenas para visualização transitória pessoal e não comercial. Esta é a concessão de uma licença,
+                    não uma transferência de título e, sob esta licença, você não pode: </p>
                 <ol>
                     <li>modificar ou copiar os materiais; </li>
                     <li>usar os materiais para qualquer finalidade comercial ou para exibição pública (comercial ou não comercial); </li>
-                    <li>tentar descompilar ou fazer engenharia reversa de qualquer software contido no site Quitanda Online;
+                    <li>tentar descompilar ou fazer engenharia reversa de qualquer software contido no site <strong>Sacolão Avenida</strong>;
                     </li>
                     <li>remover quaisquer direitos autorais ou outras notações de propriedade dos materiais; ou </li>
                     <li>transferir os materiais para outra pessoa ou 'espelhe' os materiais em qualquer outro servidor.
                     </li>
                 </ol>
-                <p>Esta licença será automaticamente rescindida se você violar alguma dessas restrições e poderá ser rescindida por Quitanda Online a qualquer momento. Ao encerrar a visualização desses materiais ou após o término desta licença, você deve
-                    apagar todos os materiais baixados em sua posse, seja em formato eletrônico ou impresso.</p>
+                <p>Esta licença será automaticamente rescindida se você violar alguma dessas restrições e poderá ser rescindida por <strong>Sacolão Avenida</strong> a qualquer momento. Ao encerrar a visualização desses materiais ou após o término desta licença,
+                    você deve apagar todos os materiais baixados em sua posse, seja em formato eletrônico ou impresso.</p>
                 <h2>3. Isenção de responsabilidade</h2>
                 <ol>
-                    <li>Os materiais no site da Quitanda Online são fornecidos 'como estão'. Quitanda Online não oferece garantias, expressas ou implícitas, e, por este meio, isenta e nega todas as outras garantias, incluindo, sem limitação, garantias implícitas
-                        ou condições de comercialização, adequação a um fim específico ou não violação de propriedade intelectual ou outra violação de direitos.</li>
-                    <li>Além disso, o Quitanda Online não garante ou faz qualquer representação relativa à precisão, aos resultados prováveis ​​ou à confiabilidade do uso dos materiais em seu site ou de outra forma relacionado a esses materiais ou em sites
-                        vinculados a este site.</li>
+                    <li><strong>Sacolão Avenida</strong> são fornecidos 'como estão'. <strong>Sacolão Avenida</strong> não oferece garantias, expressas ou implícitas, e, por este meio, isenta e nega todas as outras garantias, incluindo, sem limitação, garantias
+                        implícitas ou condições de comercialização, adequação a um fim específico ou não violação de propriedade intelectual ou outra violação de direitos.</li>
+                    <li>Além disso, o <strong>Sacolão Avenida</strong> não garante ou faz qualquer representação relativa à precisão, aos resultados prováveis ​​ou à confiabilidade do uso dos materiais em seu site ou de outra forma relacionado a esses materiais
+                        ou em sites vinculados a este site.</li>
                 </ol>
                 <h2>4. Limitações</h2>
-                <p>Em nenhum caso o Quitanda Online ou seus fornecedores serão responsáveis ​​por quaisquer danos (incluindo, sem limitação, danos por perda de dados ou lucro ou devido a interrupção dos negócios) decorrentes do uso ou da incapacidade de
-                    usar os materiais em Quitanda Online, mesmo que Quitanda Online ou um representante autorizado da Quitanda Online tenha sido notificado oralmente ou por escrito da possibilidade de tais danos. Como algumas jurisdições não permitem
-                    limitações em garantias implícitas, ou limitações de responsabilidade por danos conseqüentes ou incidentais, essas limitações podem não se aplicar a você.</p>
+                <p>Em nenhum caso o <strong>Sacolão Avenida</strong> e ou seus fornecedores serão responsáveis ​​por quaisquer danos (incluindo, sem limitação, danos por perda de dados ou lucro ou devido a interrupção dos negócios) decorrentes do uso ou
+                    da incapacidade de usar os materiais em <strong>Sacolão Avenida</strong>, mesmo que <strong>Sacolão Avenida</strong> ou um representante autorizado da <strong>Sacolão Avenida</strong> tenha sido notificado oralmente ou por escrito
+                    da possibilidade de tais danos. Como algumas jurisdições não permitem limitações em garantias implícitas, ou limitações de responsabilidade por danos conseqüentes ou incidentais, essas limitações podem não se aplicar a você.</p>
                 <h2>5. Precisão dos materiais</h2>
-                <p>Os materiais exibidos no site da Quitanda Online podem incluir erros técnicos, tipográficos ou fotográficos. Quitanda Online não garante que qualquer material em seu site seja preciso, completo ou atual. Quitanda Online pode fazer alterações
-                    nos materiais contidos em seu site a qualquer momento, sem aviso prévio. No entanto, Quitanda Online não se compromete a atualizar os materiais.</p>
+                <p>Os materiais exibidos no site da <strong>Sacolão Avenida</strong> podem incluir erros técnicos, tipográficos ou fotográficos. <strong>Sacolão Avenida</strong> não garante que qualquer material em seu site seja preciso, completo ou atual.
+                    <strong>Sacolão Avenida</strong> pode fazer alterações nos materiais contidos em seu site a qualquer momento, sem aviso prévio. No entanto, <strong>Sacolão Avenida</strong> não se compromete a atualizar os materiais.</p>
                 <h2>6. Links</h2>
-                <p>O Quitanda Online não analisou todos os sites vinculados ao seu site e não é responsável pelo conteúdo de nenhum site vinculado. A inclusão de qualquer link não implica endosso por Quitanda Online do site. O uso de qualquer site vinculado
-                    é por conta e risco do usuário.</p>
+                <p>O <strong>Sacolão Avenida</strong> não analisou todos os sites vinculados ao seu site e não é responsável pelo conteúdo de nenhum site vinculado. A inclusão de qualquer link não implica endosso por <strong>Sacolão Avenida</strong> do site.
+                    O uso de qualquer site vinculado é por conta e risco do usuário.</p>
                 </p>
                 <h3>Modificações</h3>
-                <p>O Quitanda Online pode revisar estes termos de serviço do site a qualquer momento, sem aviso prévio. Ao usar este site, você concorda em ficar vinculado à versão atual desses termos de serviço.</p>
+                <p>O <strong>Sacolão Avenida</strong> pode revisar estes termos de serviço do site a qualquer momento, sem aviso prévio. Ao usar este site, você concorda em ficar vinculado à versão atual desses termos de serviço.</p>
                 <h3>Lei aplicável</h3>
-                <p>Estes termos e condições são regidos e interpretados de acordo com as leis do Quitanda Online e você se submete irrevogavelmente à jurisdição exclusiva dos tribunais naquele estado ou localidade.</p>
+                <p>Estes termos e condições são regidos e interpretados de acordo com as leis do <strong>Sacolão Avenida</strong> e você se submete irrevogavelmente à jurisdição exclusiva dos tribunais naquele estado ou localidade.</p>
             </div>
         </main>
 
-        <footer class="border-top text-muted bg-danger ">
-            <div class="container">
-                <div class="row py-3">
-                    <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="privacidade.html" class="text-decoration-none">
+        <!-- init-footer  -->
+        <div class="imgsvg">
+            <img src="img/svg/wave.svg">
+            <footer class="border-top text-muted " id="columun-footer">
+                <div class="container">
+                    <div class="row py-3">
+                        <div class="col-12 col-md-4 text-center">
+                            &copy; 2020 - Sacolão Avenida Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="privacidade.html" class="text-decoration-none ">
                             Política de Privacidade
                         </a><br>
-                        <a href="termos.html" class="text-decoration-none">
+                            <a href="termos.html" class="text-decoration-none ">
                             Termos de Uso
                         </a><br>
-                        <a href="quemsomos.html" class="text-decoration-none">
+                            <a href="quemsomos.html" class="text-decoration-none">
                             Quem Somos
                         </a><br>
-                        <a href="trocas.html" class="text-decoration-none">
+                            <a href="trocas.html" class="text-decoration-none ">
                             Trocas e Devoluções
                         </a>
-                    </div>
-                    <div class="col-12 col-md-4 text-center">
-                        <a href="contato.html" class="text-decoration-none">
+                        </div>
+                        <div class="col-12 col-md-4 text-center">
+                            <a href="contato.html" class="text-decoration-none">
                             Contato pelo Site
                         </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none">
                             email@dominio.com
                         </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none">
-                            (77) 99999-0000
+                            (77) 99999-9999
+                            
                         </a>
+                        </div>
                     </div>
                 </div>
+        </div>
+        <section>
+            <div class="footer-ma">
+                <div class="footer ">
+
+                </div>
+                <p> <a class="text-decoration-none" href=" https://github.com/mateusnagelo " target="_blank" rel="noopener noreferrer">
+                Copyright © 2022 todos os direitos reservados | Este site foi criado por Mateus Ângelo
+            </a>
+                </p>
             </div>
-        </footer>
+        </section>
     </div>
+    </footer>
+
+    <!-- the end footer  -->
+
+
+    <!-- init button topo  -->
+    <div class="topo-button">
+        <i class="bi bi-arrow-up-circle" id="back-to-top" onclick="scrollBar()" style="font-size: 35px; line-height: 50px;"></i>
+    </div>
+
+    <!-- the end button topo  -->
+
+    <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
