--- a/fechamento_pedido.html
+++ b/fechamento_pedido.html
@@ -69,7 +69,7 @@
                 <p>Em até 2 horas, seu pedido será entregue. Qualquer dúvida sobre este pedido, entre em contato conosco e informe o número do pedido para que possamos te ajudar.</p>
                 <p>Tenha um ótimo dia!</p>
                 <p>
-                    Atenciosamente,<br> Equipe Quitanda Online
+                    Atenciosamente,<br> Equipe Sacolão Avenida
                 </p>
                 <p>
                     <a href="index.html" class="btn btn-danger btn-lg">Voltar à Página Principal</a>
