--- a/cadastro.html
+++ b/cadastro.html
@@ -32,12 +32,7 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Principal</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="contato.html">Contato</a>
-                        </li> -->
+
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav flex-grow-1">
@@ -71,7 +66,7 @@
                 <hr>
                 <form class="mt-3">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6">
+                        <div class="col-sm-12 col-md-6" id="form-dados-pessoais">
                             <fieldset class="row gx-3">
                                 <legend>Dados Pessoais</legend>
                                 <div class="form-floating mb-3">
@@ -106,7 +101,7 @@
                             <fieldset class="row gx-3">
                                 <legend>Endereço</legend>
                                 <div class="form-floating mb-3 col-md-6 col-lg-4">
-                                    <input class="form-control" type="text" id="txtCEP" placeholder=" " required/>
+                                    <input class="form-control" type="text" id="txtCEP" placeholder=" " required />
                                     <label for="txtCEP">CEP</label>
                                 </div>
                                 <div class="mb-3 col-md-6 col-lg-8 align-self-end">
