--- a/base.html
+++ b/base.html
@@ -20,9 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <title>Sacolão Avenida : Página Principal</title>
-    <!-- <div class="imgsvg-head">
-        <img src="img/svg/topo.svg" alt=""   bg-danger >
-    </div> -->
+
 
 
 </head>
@@ -135,6 +133,10 @@
 
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <script src="js/jquery-3.4.1.slim.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    </script>
 </body>
 
 </html>
