--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -96,7 +96,7 @@
                                 <label for="txtNome">Nome</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                <input class="form-control" type="text" id="txtCPF" placeholder=" " />
+                                <input class="form-control" type="text" id="cpf" placeholder=" " />
                                 <label for="txtCPF">CPF</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
@@ -171,6 +171,7 @@
 
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./scripts/validcpf.js"></script>
 </body>
 
 </html>
