--- a/contato.html
+++ b/contato.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css.map">
+    <link rel="stylesheet" href="css/bootstrap.css.map"> -->
 
     <title>Sacolão Avenida : Contato</title>
 </head>
@@ -32,12 +34,7 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Principal</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="contato.html">Contato</a>
-                        </li> -->
+
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav flex-grow-1">
@@ -68,26 +65,29 @@
         <main class="flex-fill">
             <div class="container">
                 <div class="row justify-content-center">
-                    <form class="col-sm-10 col-md-8 col-lg-6">
+                    <form class="col-sm-10 col-md-8 col-lg-6" id="form-contato">
                         <h1>Entre em Contato</h1>
 
                         <div class="form-floating mb-3">
-                            <input type="text" id="txtNomeCompleto" class="form-control" placeholder=" " autofocus>
-                            <label for="txtNomeCompleto">Nome Completo</label>
+                            <input class="form-control" type="text" name="nome" id="nome" placeholder=" " autofocus>
+                            <label for="nome">Nome Completo</label>
                         </div>
 
                         <div class="form-floating mb-3">
-                            <input type="email" id="txtEmail" class="form-control" placeholder=" ">
-                            <label for="txtEmail">E-mail</label>
+                            <input type="email" id="email" name="email" class="form-control" placeholder=" ">
+                            <label for="email">E-mail</label>
                         </div>
 
                         <div class="form-floating mb-3">
-                            <textarea id="txtMensagem" class="form-control" placeholder=" " style="height: 200px;"></textarea>
-                            <label for="txtMensagem">Mensagem</label>
+                            <textarea id="mensagem" name="mensagem" class="form-control" placeholder=" " style="height: 200px;"></textarea>
+                            <label for="mensagem">Mensagem</label>
                         </div>
-
-                        <button type="button" onclick="window.location.href='/confirmcontato.html'" class="btn btn-lg btn-danger">Enviar Mensagem</button>
-
+                        <div class="form-group text-center">
+                            <button type="submit" class="btn btn-danger">Enviar Mensagem</button>
+                        </div>
+                        <div class="alert alert-danger d-none">
+                            Preencha o campo <span id="campo-erro"></span>!
+                        </div>
                         <p class="mt-3">
                             Faremos nosso melhor para responder sua mensagem em até 2 dias úteis.
                         </p>
@@ -162,6 +162,9 @@
 
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./scripts/forme.js"></script>
+    <script src="./js/jquery-3.4.1.slim.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 </body>
 
 </html>
