Inclusao mask com javascript

--- a/cliente_endereco.html
+++ b/cliente_endereco.html
@@ -97,7 +97,7 @@
                     <div class="col-8">
                         <form action="">
                             <div class="form-floating mb-3 col-md-6 col-lg-4">
-                                <input class="form-control" type="text" id="txtCEP" placeholder=" " autofocus />
+                                <input class="form-control" type="text" id="cep" placeholder=" " autofocus />
                                 <label for="txtCEP">CEP</label>
                             </div>
                             <div class="mb-3 col-md-6 col-lg-8">
@@ -183,6 +183,10 @@
 
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
+    <script src="./scripts/validcpf.js"></script>
 </body>
 
 </html>
