insert buttons 'confirmar' 'alterar'

--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -103,6 +103,10 @@
                                 <input class="form-control" type="date" name="dataNascimento" />
                                 <label for="txtDataNascimento">Data de Nascimento</label>
                             </div>
+
+                            <button type="button" onclick="logar()" id="send" class="btn btn-lg btn-success">Confirmar</button>
+                            <button type="button" onclick="logar()" id="send" class="btn btn-lg btn-danger">Alterar</button>
+                            </button>
                         </form>
                     </div>
                 </div>
